# wimygit

./: .gitignore  HOW_TO_UPDATE_APP_ICON.md  IncreaseNightlyVersion.ps1  README.md  SetNightlyVersion.ps1  WimyGit.sln  WimyGit.slnx
.github/: FUNDING.yml
UnitTest/: UnitTest.csproj  UnitTest1.cs
WimyGit/: App.xaml  App.xaml.cs  CommitIdToFileListConverter.cs  ConsoleProgressWindow.xaml  ConsoleProgressWindow.xaml.cs  DelegateCommand.cs  DirectoryTree.cs  FileStatus.cs  GitPorcelainParser.cs  GitWrapper.cs  IGitRepository.cs  ILogger.cs  LastTabInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  NewRepositoryController.cs  ProgramPathFinder.cs  RecentRepository.cs  RepositoryTabViewModel.cs  RunExternal.cs  SelectionRecover.cs  Service.cs  Util.cs  ViewModel.History.cs  ViewModel.OpenCommand.cs  ViewModel.Pending.cs  ViewModel.RepositoryList.cs  ViewModel.WindowStatus.cs  ViewModel.cs  WimyGit.csproj
WimyGitLib/: AnsiParser.cs  AnsiToken.cs  BranchParser.cs  Constants.cs  DownloadParser.cs  GetParentCommitIds.cs  GitAttributes.cs  GitIgnore.cs  (+4 more)
wimygit-tauri/src-tauri/: Cargo.toml  tauri.conf.json
wimygit-tauri/src-tauri/capabilities/: default.json
wimygit-tauri/src-tauri/icons/: icon.icns
wimygit-tauri/src-tauri/icons-nightly/: icon.icns
wimygit-tauri/src-tauri/src/: lib.rs  main.rs
wimygit-tauri/src-tauri/src/git/: executor.rs  mod.rs
wimygit-tauri/src-tauri/src/git/parsers/: blame.rs  branch.rs  filesystem.rs  history.rs  lfs.rs  mod.rs  remote.rs  stash.rs  status.rs  tag.rs  timelapse.rs  worktree.rs
wimygit-tauri/src-tauri/src/plugin/: mod.rs
(+218 files in other folders)
