[package]
name = "wimygit"
version = "0.1.0"
description = "WimyGit - Cross-platform Git GUI Client"
authors = ["WimyGit Team"]
license = "MIT"
repository = "https://github.com/user/wimygit"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wimygit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
regex = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
roxmltree = "0.21"
base64 = "0.22"
